Fix overlapping title and button for page layout

--- a/src/components/PageLayout/pagelayout.module.scss
+++ b/src/components/PageLayout/pagelayout.module.scss
@@ -12,19 +12,26 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 
   margin-top: 1.5rem;
 
   @media #{variables.$mobile} {
     flex-direction: column;
+    align-items: start;
+    margin-bottom: 1rem;
   }
 }
 
 .description {
   display: flex;
   flex-direction: column;
-  margin-top: -2rem;
-  gap: 0.5rem;
+  margin-top: -2.5rem;
+  gap: .5rem;
+
+  @media #{variables.$mobile} {
+    margin-top: 0;
+  }
 }
 
 .descriptionSpacing {
